--- a/titanic/project-titanic.ipynb
+++ b/titanic/project-titanic.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Kaggle - Titanic\n",
-    "https://www.kaggle.com/c/titanic"
+    "check out more information about the data: https://www.kaggle.com/c/titanic"
    ]
   },
   {
@@ -98,7 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preprocessing"
+    "## Data Preprocessing\n",
+    "You can modify the code here to extract your own features."
    ]
   },
   {
@@ -352,7 +353,9 @@
    "metadata": {},
    "source": [
     "## Predict & Generate submission data\n",
-    "submission data files would be in the `output` directory."
+    "You can tune the model parameters here! \n",
+    "\n",
+    "Submission data files would be in the `output` directory. You can upload the submission files to the competition on Kaggle to check out the accuracies of your predictions on testing data."
    ]
   },
   {
